Correción de errores ortograficos y correción del navbar

--- a/LibreriaFlow/Views/Producto/Delete.cshtml
+++ b/LibreriaFlow/Views/Producto/Delete.cshtml
@@ -1,13 +1,13 @@
 ﻿@model LibreriaFlow.Models.Biblioteca
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Borrar Libro";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Esta seguro de que desea borrar este libro?</h3>
 <div>
     <h4>Biblioteca</h4>
     <hr />
