--- a/LibreriaFlow/Views/Producto/Create.cshtml
+++ b/LibreriaFlow/Views/Producto/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LibreriaFlow.Models.Biblioteca
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Crear";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -57,7 +57,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Libros", "Index")
 </div>
 
 @section Scripts {
