--- a/LibreriaFlow/Views/Producto/Details.cshtml
+++ b/LibreriaFlow/Views/Producto/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LibreriaFlow.Models.Biblioteca
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalles";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
