--- a/LibreriaFlow/Views/Producto/Edit.cshtml
+++ b/LibreriaFlow/Views/Producto/Edit.cshtml
@@ -1,11 +1,11 @@
 ﻿@model LibreriaFlow.Models.Biblioteca
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>Edición de Libro</h2>
 
 
 @using (Html.BeginForm())
@@ -13,7 +13,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Biblioteca</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.id)
@@ -59,7 +58,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Libros", "Index")
 </div>
 
 @section Scripts {
